<resources>
    <string name="app_name">Jamtay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_search">Search</string>
    <string name="menu_additional_settings">Additional Settings</string>
    <string name="menu_message">Message</string>
    <string name="menu_shortlisted">Shortlisted</string>
    <string name="menu_custom_matches">Custom Matches</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_express_interest">Express Interest</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_photo_request">Photo Request</string>
    <string name="upgrade_membership">Upgrade Membership</string>
    <string name="nav_view_profile">View Profile</string>
</resources>
