<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />

        <item android:title="Myprofile"
            android:icon="@drawable/ic_profile"/>
        <item
            android:id="@+id/nav_additional_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_additional_settings" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_email"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_shortlisted"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_shortlisted" />
        <item
            android:id="@+id/nav_custom_matches"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_custom_matches" />
        <item
            android:id="@+id/nav_photo_request"
            android:icon="@drawable/ic_lock"
            android:title="@string/menu_photo_request" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_call"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_express_interest"
            android:icon="@drawable/ic_sentiment_satisfied"
            android:title="@string/menu_express_interest" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_delete"
            android:title="@string/menu_logout" />
       <!-- <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />-->
    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

</menu>
